[gd_scene load_steps=7 format=3 uid="uid://dy26mcmu4nki8"]

[ext_resource type="FontFile" uid="uid://xwtdc32k1lsb" path="res://assets/Fonts/VCR_OSD_MONO_1.001.ttf" id="1_rr5jd"]
[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_vep2b"]
[ext_resource type="Texture2D" uid="uid://daosrpg5ogsbj" path="res://assets/backgrounds/Background_2.png" id="2_y8jrg"]
[ext_resource type="Texture2D" uid="uid://h4ibbieo3ixo" path="res://assets/backgrounds/Background_1.png" id="3_iqeom"]
[ext_resource type="AudioStream" uid="uid://c1uej17uwvc48" path="res://assets/Music/Twisted.mp3" id="5_kn8e0"]

[sub_resource type="LabelSettings" id="LabelSettings_dfbyw"]
font_size = 90
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vep2b")

[node name="BackgroundImage" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="BackgroundImage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y8jrg")

[node name="TextureRect2" type="TextureRect" parent="BackgroundImage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_iqeom")

[node name="ColorRect" type="ColorRect" parent="BackgroundImage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_rr5jd")
theme_override_font_sizes/font_size = 90
text = "DEMON SWORD TAZZOMOS"
label_settings = SubResource("LabelSettings_dfbyw")
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_rr5jd")
theme_override_font_sizes/font_size = 48
text = "PLAY"

[node name="Controls" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_rr5jd")
theme_override_font_sizes/font_size = 48
text = "CONTROLS
"

[node name="Lore" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_rr5jd")
theme_override_font_sizes/font_size = 48
text = "LORE"

[node name="Quit" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_rr5jd")
theme_override_font_sizes/font_size = 48
text = "QUIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_kn8e0")
autoplay = true

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Lore" to="." method="_on_lore_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
